# swoole-src

./: '  .clang-format  .cproject  .editorconfig  .gitattributes  .gitignore  .gitmodules  .php-cs-fixer.dist.php  .project  .travis.yml  CLAUDE.md  CMakeLists.txt  CODE-STYLE.md  COMPILE_FIX.md  COMPILE_LINUX_README_<--  CPPLINT.cfg  CREDITS  DEBIAN_INSTALL.md  Dockerfile  HTTP3_BUILD_GUIDE.md  HTTP3_IMPLEMENTATION_PLAN.md  HTTP3_QUICKSTART.md  HTTP3_SUMMARY.md  LICENSE  Makefile.frag  MySQL_COCO.md  NGHTTP3_INTEGRATION_STATUS.md  OPENSSL_QUIC_INTEGRATION.md  PHP_API.hpp  PHP_embed.hpp  README-CN.md  README-HTTP3.md  README.md  SESSION_SUMMARY.md  STREAM_PROCESSING_STATUS.md  SUPPORTED.md  Version2.md  aio_test_file  auto_test_crash.sh  build.sh  (+164 more)
core-tests/: .gitignore  CMakeLists.txt  README-CN.md  README.md  code-stats.sh  docker-compose.yml  google-style.xml  run.sh
core-tests/fuzz/: project.json
core-tests/fuzz/cases/: req1.txt
core-tests/fuzz/src/: main.cpp
core-tests/include/: coro_test.h  httplib_client.h  httplib_server.h  process.h  redis_client.h  test_core.h  test_coroutine.h  test_process.h  test_server.h  tests.h
core-tests/include/wrapper/: coroutine.h  server.h
core-tests/js/: mqtt.js  package.json  ws.js  ws_1.js  ws_2.js
core-tests/samples/: CMakeLists.txt  README-CN.md  README.md  s1.cc
core-tests/samples/src/: s1.cc
core-tests/server/: base_server.php  tcp.php
core-tests/src/: cares.cpp  client.cpp  coro.cpp  coro_test.cpp  hashmap.cpp  heap.cpp  lru_cache.cpp  main.cpp  pipe.cpp  rbtree.cpp  ringbuffer.cpp  serv_test.cpp  server.cpp  string.cpp  thread_pool.cpp
core-tests/src/_lib/: http.cpp  process.cpp  redis.cpp  server.cpp  ssl.cpp
core-tests/src/client/: client.cpp
core-tests/src/core/: base.cpp  channel.cpp  crc32.cpp  hash.cpp  heap.cpp  log.cpp  ring_queue.cpp  string.cpp  time.cpp  util.cpp  wheel_timer.cpp
core-tests/src/coroutine/: accept.cpp  async.cpp  base.cpp  channel.cpp  file.cpp  gethostbyname.cpp  hook.cpp  http_server.cpp  iouring.cpp  socket.cpp  system.cpp  uring_socket.cpp
core-tests/src/lock/: lock.cpp
examples/wrapper/: CMakeLists.txt  server.cpp
src/: .gitignore  CMakeLists.txt
src/conf/: Conf.c
src/core/: Base.c  Chan.c  Channel.c  RingBuffer.c  RingMempool.c  RingQueue.c  UnitTest.c  array.c  array.cc  base.c  base.cc  base64.cc  buffer.cc  call_stack.cc  channel.c  channel.cc  crc32.cc  error.cc  hashmap.c  hashmap.cc  heap.c  heap.cc  list.c  list.cc  log.c  log.cc  md5.c  misc.cc  rbtree.c  rbtree.cc  ring_queue.c  ring_queue.cc  socket.c  socket.cc  string.c  string.cc  timer.c  timer.cc
src/coroutine/: base.cc  boost.cc  channel.cc  client.cc  co.cc  context.cc  coroutine.cc  dns_resolver.cc  file.cc  file_lock.cc  hook.cc  iocp.cc  iocp_socket.cc  iouring.cc  libco.cc  php_coro.cc  socket.cc  system.cc  thread_context.cc  ucontext.cc  uring_socket.cc
src/factory/: Factory.c  FactoryProcess.c  FactoryThread.c  base.c  process.c  thread.c
src/lock/: AtomicLock.c  Cond.c  FileLock.c  Mutex.c  RWLock.c  Semaphore.c  SpinLock.c  atomic.cc  barrier.cc  cond.c  cond.cc  coroutine_lock.cc  file_lock.c  file_lock.cc  mutex.c  mutex.cc  rw_lock.cc  semaphore.c  spin_lock.cc
src/memory/: Buffer.c  FixedPool.c  Malloc.c  MemPool.c  MemoryGlobal.c  MemoryPool.c  RingBuffer.c  ShareMemory.c  Table.c  buffer.c  buffer.cc  fixed_pool.c  fixed_pool.cc  global_memory.c  global_memory.cc  malloc.c  malloc.cc  ring_buffer.c  ring_buffer.cc  shared_memory.c  shared_memory.cc  table.c  table.cc
src/network/: Buffer.c  Client.c  Connection.c  DNS.c  EventTimer.c  Manager.c  Port.c  ProcessPool.c  ReactorProcess.c  ReactorThread.c  Server.c  Socket.c  Stream.c  Task.c  TaskWorker.c  ThreadPool.c  TimeWheel.c  Timer.c  Worker.c  address.cc  async_thread.cc  buffer.c  cares.cc  client.c  client.cc  connection.c  connection.cc  dns.c  dns.cc  dtls.cc  manager.c  port.c  process_pool.c  process_pool.cc  reactor_process.c  reactor_thread.c  server.c  socket.cc  stream.c  stream.cc  (+5 more)
src/os/: aio.c  async_thread.cc  available_cpu.cc  base.c  base.cc  cgroup_linux.cc  dl.c  eio.c  file.cc  gcc_aio.c  inotify.c  iouring.cc  linux_aio.c  msg_queue.c  msg_queue.cc  pipe.cc  process_pool.cc  sendfile.c  sendfile.cc  signal.c  signal.cc  thread_pool.cc  timer.c  timer.cc  unix_socket.cc  wait.cc  win32.cc
src/pipe/: PipeBase.c  PipeEventfd.c  PipeMsg.c  PipeUnsock.c  base.c  base.cc  eventfd.c  eventfd.cc  unix_socket.c  unix_socket.cc
src/protocol/: Base.c  Base64.c  Http.c  Http2.c  MimeTypes.c  Mqtt.c  Redis.c  SSL.c  Sha1.c  Socks5.c  WebSocket.c  base.c  base.cc  base64.c  base64.cc  dtls.cc  http.c  http.cc  http2.c  http2.cc  http3.cc  message_bus.cc  mime_type.cc  mime_types.cc  mqtt.c  mqtt.cc  mysql.cc  quic.cc  quic_openssl.cc  redis.c  redis.cc  sha1.c  sha1.cc  socks5.c  socks5.cc  ssl.c  ssl.cc  websocket.c  websocket.cc
src/queue/: Msg.c  Ring.c
src/reactor/: ReactorBase.c  ReactorEpoll.c  ReactorEpoll.lo  ReactorIocp.c  ReactorKqueue.c  ReactorPoll.c  ReactorSelect.c  base.c  base.cc  defer_task.cc  epoll.c  epoll.cc  kqueue.c  kqueue.cc  poll.c  poll.cc  reactor_iocp.cc  select.c  select.cc
src/server/: base.c  base.cc  manager.c  manager.cc  master.c  master.cc  message_bus.cc  port.c  port.cc  process.c  process.cc  reactor_process.c  reactor_process.cc  reactor_thread.c  reactor_thread.cc  static_handler.cc  task_worker.c  task_worker.cc  thread.cc  worker.cc  worker_threads.cc
src/wrapper/: README.md  Server.cc  Timer.cc  array.cc  class.cc  client.cc  event.cc  exec.cc  function.cc  http.cc  object.cc  server.cc  timer.cc  variant.cc
src/zlog/: buf.c  buf.h  category.c  category.h  category_table.c  category_table.h  conf.c  conf.h  event.c  event.h  fmacros.h  format.c  format.h  level.c  level.h  level_list.c  level_list.h  makefile  mdc.c  mdc.h  record.c  record.h  record_table.c  record_table.h  rotater.c  rotater.h  rule.c  rule.h  spec.c  spec.h  thread.c  thread.h  version.h  zc_arraylist.c  zc_arraylist.h  zc_defs.h  zc_hashtable.c  zc_hashtable.h  zc_profile.c  zc_profile.h  (+6 more)
(+4907 files in other folders)
